--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-native": "0.67.4",
     "react-native-vector-icons": "^9.1.0",
     "react-query": "^3.34.16",
-    "rn-fetch-blob": "^0.12.0",
-    "shitty-qs": "^1.0.1"
+    "rn-fetch-blob": "git+https://github.com/joltup/rn-fetch-blob.git"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
